# PyADM1ODE

./: .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pre-commit_config.yaml  404.html  ADMparams.py  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PyADM1.py  README.md  REQUIREMENTS.md  Simulator.py  TESTING.md  changes.diff  cliff.toml  digester_initial8.csv  environment.yml  feedstock.py  index.html  main.py  mkdocs.yml  pyproject.toml  requirements-windows.txt  requirements.txt  sitemap.xml
.github/workflows/: auto-version.yml  codeql.yml  dependency-review.yml  docs.yml  lint.yml  release.yml  tests.yml
api_reference/: components.rst  configurator.rst
api_reference/components/biological/: index.html
api_reference/components/components/: index.html
api_reference/components/energy/: index.html
api_reference/components/feeding/: index.html
api_reference/components/mechanical/: index.html
api_reference/components/sensors/: index.html
api_reference/configurator/configurator/: index.html
api_reference/configurator/templates/: index.html
api_reference/core/core/: index.html
api_reference/simulation/simulation/: index.html
api_reference/substrates/substrates/: index.html
benchmark/: README.md  llm_benchmark_de.ipynb  llm_benchmark_en.ipynb  results.csv
benchmark/dataset/: README.md  index.json
benchmark/dataset/BGA1/: BGA1.json  BGA1_en.json  BGA1_sketch.json  BGA1_sketch_full.json  BGA1_terse.json  BGA1_terse_de.json  BGA1_terse_de_full.json  BGA1_text_de.json  BGA1_text_de_full.json  BGA1_text_en.json  BGA1_text_en_full.json  gold.py
benchmark/dataset/BGA2/: BGA2_sketch.json  BGA2_sketch_full.json  BGA2_terse_de.json  BGA2_terse_de_full.json  BGA2_text_de.json  BGA2_text_de_full.json  BGA2_text_en.json  BGA2_text_en_full.json  gold.py
benchmark/dataset/BGA3/: BGA3_sketch.json  BGA3_sketch_full.json  BGA3_terse_de.json  BGA3_terse_de_full.json  BGA3_text_de.json  BGA3_text_de_full.json  BGA3_text_en.json  BGA3_text_en_full.json  gold.py
benchmark/eval/: __init__.py  _harness.py  batch.py  make_index.py  matcher.py  oracle.py  prompt.py  runner.py  selftest.py  solve.py
benchmark/schema/: plant_datapoint.schema.json
benchmark/viewer/: index.html
data/: plant_measurements_csv.md
data/initial_states/: digester_initial8.csv  digester_initial_fermenter_35C.csv  digester_initial_simba.csv  digester_initial_simba_adm1da.csv
data/substrates/: cattle_manure.yaml  cattle_manure_solid.yaml  cereal_gps_silage.yaml  chicken_manure_dry.yaml  convert_xml.py  corn_cob_mix.yaml  grass_silage.yaml  green_rye_silage.yaml  maize_silage_gummersbach.yaml  maize_silage_milk_ripeness.yaml  onion_waste.yaml  substrate_gummersbach.xml  substrates.xlsx  swine_manure.yaml  swine_manure_gummersbach.yaml  wheat_whole_plant_silage.yaml
data/substrates/adm1da/: cattle_manure.xml  maize_silage_milk_ripeness.xml  swine_manure.xml
data/substrates/examples/: README.md  cattle_manure.toml  cattle_manure.xml  cattle_manure.yaml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/CHANGELOG/: index.html
dev/api/biological/: index.html
dev/api/core/: index.html
dev/architecture/: index.html
dev/benchmark/: index.html
dev/en/: index.html
dev/metrics/: index.html
dev/search/: search_index.json
development/TESTING/: index.html
development/architecture/: index.html
docs/: index.md
docs/api_reference/: biological.md  components.md  components.rst  core.rst  energy.md  feeding.md  mechanical.md  sensors.md
docs/assets/: mathjax-config.js
docs/de/: CHANGELOG.md  index.md  metrics.md
docs/en/: index.md  metrics.md
docs/examples/: basic_digester.md  calibration_workflow.md  parallel_simulation.md  two_stage_plant.md
docs/user_guide/: calibration.md  components.md  installation.md  quickstart.md  troubleshooting.md
examples/: 01_basic_digester.py  02_two_stage_plant.py  03_comprehensive_plant.py  03_realistic_plant.py  05_parallel_two_stage_simulation.py  06_parallel_operation_studies.py  07_physical_sensors.py  08_chemical_sensors.py  09_gas_sensors.py  10_adm1da_basic_digester.py  13_realistic_plant.py  _sensor_demo_helpers.py  biogas_mcp_client.py  colab_01_basic_digester.ipynb  colab_02_complex_plant.ipynb  colab_03_parallel_two_stage_simulation.ipynb  quickstart.py  two_stage_digester.py  two_stage_simulation.py
examples/basic_digester/: index.html
examples/parallel_simulation/: index.html
examples/two_stage_plant/: index.html
git-cliff/: CHANGELOG.md
pyadm1/: README.md  __init__.py  __version__.py
pyadm1/calibration/: README.md  __init__.py  calibrator.py  initial.py  online.py  parameter_bounds.py  validation.py
pyadm1/components/: README.md  __init__.py  base.py  registry.py
pyadm1/configurator/: __init__.py  connection_manager.py  graph.py  plant_builder.py  plant_configurator.py
pyadm1/core/: __init__.py  adm1.py  adm1_torch.py  adm1da.py  adm1da_params.py  adm_base.py  adm_equations.py  adm_params.py  pyadm1.py  simulator.py  solver.py
pyadm1/dlls/: README.md
pyadm1/io/: __init__.py  csv_handler.py  database.py  measurement_data.py
pyadm1/plant/: __init__.py  chp.py  connection.py  digester.py  heating.py  plant_model.py
pyadm1/simulation/: __init__.py  parallel.py  simulator.py
pyadm1/substrates/: __init__.py  adm1da_feedstock.py  feedstock.py
pyadm1/utils/: __init__.py  api_doc_generator.py  dll_loader.py  fix_markdown_lists.py  generate_skill_md.py
scripts/: bump_version.py  calibration_example.py  generate_measurement_data.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_adm_params.py  test_pyadm1.py  test_simulator.py
tests/integration/: test_parallel_consistency.py  test_parallel_simulation.py  test_plant_simulation.py
tests/unit/: test_api_doc_generator.py  test_coverage_gaps.py  test_feedstock.py  test_gas_storage_and_flare.py  test_simulation_parallel.py  test_simulator.py
user_guide/components/: index.html
user_guide/installation/: index.html
user_guide/quickstart/: index.html
user_guide/troubleshooting/: index.html
(+248 files in other folders)
