[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyadm1"
version = "0.2.1"
description = "Python implementation of Anaerobic Digestion Model No. 1 (ADM1)"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Daniel Gaida", email = "daniel.gaida@th-koeln.de"}
]
maintainers = [
    {name = "Daniel Gaida", email = "daniel.gaida@th-koeln.de"}
]
keywords = [
    "ADM1",
    "anaerobic digestion",
    "biogas",
    "biochemical model",
    "simulation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "pythonnet>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pytest-asyncio>=0.21.0",
    "psycopg2-binary>=2.9.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.0",
]
all = [
    "pyadm1[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/dgaida/PyADM1ODE"
Repository = "https://github.com/dgaida/PyADM1ODE"
Documentation = "https://github.com/dgaida/PyADM1ODE#readme"
"Bug Tracker" = "https://github.com/dgaida/PyADM1ODE/issues"

[project.scripts]
pyadm1-simulate = "pyadm1.cli:main"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
pyadm1 = ["dlls/*.dll", "py.typed"]
# Include data files in package
"*" = ["*.xml", "*.csv"]

[tool.black]
line-length = 127
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | dlls
)/
'''

[tool.ruff.lint.per-file-ignores]
# Example scripts need sys.path.insert before importing pyadm1, which puts
# third-party imports after a statement. That's intentional for standalone runs.
"examples/*.py" = ["E402"]

[tool.isort]
profile = "black"
line_length = 127
skip_gitignore = true
known_first_party = ["pyadm1"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "biogas.*",
    "clr",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=pyadm1",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["pyadm1"]
omit = [
    "*/tests/*",
    "*/dlls/*",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build", "dist", "tests", "pyadm1/dlls"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 2
quiet = false
whitelist-regex = []
color = true
generate-badge = "docs/assets"
badge-format = "svg"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
